--- a/siteWebSectionBts-master/index.html
+++ b/siteWebSectionBts-master/index.html
@@ -25,6 +25,7 @@
 		<br />
 			Ce site a pour but de vous renseigner sur la section, le mat&eacute;riel, les horaires, etc. 
 			Il a &eacute;t&eacute; cr&eacute;e  dans un but &eacute;ducatif pour familiariser les &eacute;l&egrave;ves de la section &agrave; la cr&eacute;ation de sites web.
+			test
 		</p>
 		<p class="info">
 		<!--<?php
